client/src/styles/_fluid.scss
//*************
// Fluid
//*************

$blanks: lighten($toplevel-background, 5%);

/* The amount of nestings before repeat is defined in toHtml of Fluid.ml */
$prec-colors: (#301728, #93385f, #4f3466, #9f6b99);
@mixin precedence($depth) {
  .precedence-#{$depth} {
    background-color: nth($prec-colors, $depth);
  }
  .fluid-category-paren .fluid-inner.precedence-#{$depth} {
    color: nth($prec-colors, $depth);
  }
}

.fluid-paren-open .fluid-inner {
  border-radius: 8px 0 0 8px;
}
.fluid-paren-close .fluid-inner {
  border-radius: 0 8px 8px 0;
}

.fluid-variant .live-values {
  display: none;
  position: absolute;
  right: calc(#{"100% + 30px"});

  padding: 4px;
  width: max-content;
  max-width: 250px;

  white-space: pre-wrap;
  word-break: break-all;
  word-wrap: break-word;

  font-style: normal;
  font-size: $code-font-size * 0.85;
  color: $live-value-foreground;

  background-color: $live-value-background;

  &.show {
    display: block;
  }

  .copy-value {
    position: absolute;
    top: -4px;
    right: -$spacing-medium;
    color: $white1;

    opacity: 0.7;

    &:hover {
      opacity: 0.85;
    }
  }

  .jump-src:hover {
    color: $blue;
    cursor: pointer;
  }
}

#fluid-status {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 30ch;
  z-index: 10000;
  font-size: 10pt;
  background: white;
  color: black;

  dl {
    display: flex;
    flex-wrap: wrap;
    justify-content: start;
    padding: 3px;
  }

  dt,
  dd {
    margin-top: 3px;
  }

  dt {
    flex-basis: 10.5ch;
    color: $grey1;
    &:after {
      content: ": ";
    }
  }

  dd {
    flex-basis: 14ch;
    flex-grow: 1;
    dl {
      padding: 0;
    }
    dt {
      margin: 0;
      flex-basis: 6.5ch;
    }
    dd {
      margin: 0;
      flex-basis: 18ch;
    }
    &.tokenInfo {
      flex-basis: 30ch;
      margin-left: 2ch;
    }
    &.actions {
      flex-basis: 30ch;
      margin-left: 4ch;
    }
  }
}

#fluid-editor {
  /* Colors from tomorrow night:
https://github.com/chriskempson/tomorrow-theme */
  $black: #1d1f21;
  $background: transparent;
  $selected-background: #2d2d2d;
  $currentline: $black3;
  $selection: $grey3;
  $foreground: $white2;
  $comment: $grey3;

  $dropdown-background: lighten($selected-background, 10%);
  $dropdown-selected-background: darken($canvas-background, 10%);
  $dropdown-foreground: lighten($foreground, 10%);
  $dropdown-selected-foreground: $foreground;

  background-color: $background;

  .selected {
    background-color: $selected-background;
  }

  color: $foreground;
  caret-color: $foreground;
  font-size: 13.33px;

  display: inline-block;
  max-width: 200ch;

  &:focus {
    outline-width: 0;
  }

  padding: 0.5ch;

  font-family: monaco, monospace;

  .fluid-entry {
    display: inline-block;
    white-space: pre;

    &.fluid-newline {
      white-space: nowrap;
    }
  }

  .fluid-newline {
    display: block;
  }

  .fluid-category-string {
    // I don't know why this works inside &:not(.fa) and not a level up ... but
    // I tried it, since that's how we do it in _canvas.scss
    //
    // The intent here is that chars in strings should not have ligatures (see
    // https://github.com/darklang/dark/pull/1412 for screenshots).
    &:not(.fa) {
      font-family: "Fira Mono", monospace;
    }
    white-space: pre;
    color: $string-color;
  }

  // Part of the same problem, making space for it.
  .fluid-lambda-keyword {
    margin-right: 0.11px;
  }

  .fluid-lambda-symbol,
  .fluid-lambda-var,
  .fluid-lambda-arrow {
    color: $orange;
  }

  .fluid-blank,
  .fluid-placeholder,
  .fluid-empty {
    background-color: $blanks;

    &.cursor-on {
      background-color: lighten($blanks, 10%);
    }
  }

  .fluid-placeholder {
    color: $grey3;
    &.cursor-on {
      color: lighten($grey3, 5%);
    }
  }

  .fluid-empty {
    color: lighten($grey2, 10%);
  }

  .fluid-keyword {
    color: $green;
  }

  .fluid-fn-version {
    color: lighten($grey2, 2%) !important;
    vertical-align: bottom;
  }

  .fluid-fn-name,
  .fluid-fn-version {
    color: $white2;
    .execution-button {
      position: absolute;
      font-size: 55%;
      right: -8px;
      top: 0px;
      transition: color linear 0.1s;
      z-index: 1000;

      &:hover {
        font-size: 75%;
        font-weight: strong;
        margin-top: -2px;
        cursor: pointer;
      }

      &.execution-button-unsafe {
        color: $red;
      }

      &.execution-button-unavailable {
        color: grey;
      }

      &.execution-button-needed {
        color: green;
      }

      &.execution-button-repeat {
        color: green;
      }

      &.is-executing {
        color: white;
        transition: none;

        i {
          animation: spin 0.75s infinite linear;
        }
      }
    }
  }

  .related-change {
    color: $hover-foreground;
  }

  .fluid-partial,
  .fluid-partial-right {
    color: $red;
  }

  .fluid-partial-ghost {
    color: $grey3;
  }

  // <Position autocomplete as a dropdown>
  .fluid-entry {
    position: relative;
    // removing position realtive. Removing background color. Something with z-index; Opacity too. Inline-block seems to work.
  }

  .fluid-pipe-symbol {
    color: $blue;
    font-size: 10px;
    padding-top: 3px;
    padding-bottom: 1px;
  }

  /* Will style more later. Cmd palette should look like a smaller version of omnibox
since they are essentially both commands just acting upon different things. */
  .command-palette {
    background-color: $dropdown-background;
    position: absolute;
    left: 0;
    width: max-content;
    box-shadow: 1px 1px 1px black;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: stretch;
    z-index: 1000;
    margin-top: 3px;
    border: solid 1px black;
    border-top: 0px;
    border-radius: 1px 1px 3px 3px;

    #cmd-filter {
      background: transparent;
      color: $dropdown-foreground;
      margin-top: 2px;
      margin-left: 1ch;
    }

    #fluid-dropdown {
      position: relative;
      left: 0;
      background-color: transparent;
      box-shadow: 0 0 0 transparent;
      border: 0px;
      border-radius: 0px;
    }
  }

  #fluid-dropdown {
    cursor: pointer;
    background-color: $black3;
    color: $dropdown-foreground;
    z-index: 1000;
    position: absolute;
    left: -1ch;
    box-shadow: 1px 1px 1px black;
    min-width: max-content;
    width: 100%;
    max-height: 100px;
    overflow-y: scroll;
    padding: 0;
    border: 1px solid black;
    border-top: 0px;
    border-radius: 0px 0px 2px 2px;

    ul {
      margin: 0;
      padding-inline-start: 0;
      color: $dropdown-selected-foreground;
      padding-right: 5px;

      .fluid-selected {
        background-color: $highlight-color;
        color: darken(white, 5%);
      }

      li {
        list-style-type: none; // remove bullet points
        padding: 0 1ch;
        height: 16px;

        .version {
          @extend .fluid-fn-version;
        }

        .types {
          float: right;
          margin-left: 4ch;
          text-transform: lowercase;
          font-family: monospace;
          color: darken($dropdown-foreground, 15%);
        }
      }
    }
  }
}

.fluid-ast {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;

  @include precedence(1);
  @include precedence(2);
  @include precedence(3);
  @include precedence(4);
}

.fluid-error-rail {
  display: none;
  position: relative;
  width: 20px;
  margin-top: 4px;

  border-left: 1px dotted lighten($black3, 20%);

  &.show {
    display: inline-block;
  }

  .error-indicator {
    position: absolute;
    left: 6px;
  }
}

/* Hide non-fluid rail for now until we get rid of non-fluid code */
.handler-body > .fluid-ast + .rop-rail.active {
  display: none;
}

$error-color: saturate($red, 10%);

@keyframes blinkError {
  from {
    background-color: $error-color;
  }
  to {
    background-color: desaturate($error-color, 30%);
  }
}

@keyframes flashError {
  from {
    background-color: $error-color;
  }
  to {
    background-color: transparent;
  }
}

@keyframes flashIncomplete {
  from {
    background-color: $error-color;
  }
  to {
    background-color: lighten($blanks, 10%);
  }
}

@mixin error-tooltip {
  @extend .tooltip;
  background-color: rgba(30, 30, 30, 0.8);
  padding: 2px;
  width: max-content;
  position: absolute;
  top: -20px;
  left: -5px;
}

.toplevel.selected .fluid-error {
  border-bottom: 1px dashed $error-color;
  position: relative;

  /* Show tooltip on hover */
  &.is-origin:not(.cursor-on) {
    animation: blinkError 0.3s ease-in-out infinite;

    &:hover::after {
      @include error-tooltip;
    }
  }

  /* Briefly flash red background before fading */
  &.jumped-to {
    background-color: $error-color;
    animation: 1.5s flashError 0.5s;

    &.fluid-blank,
    &.fluid-empty,
    &.fluid-placeholder {
      animation: 1.5s flashIncomplete 0.5s;
    }
  }

  /* Tooltip message for sources of the incomplete */
  &.dark-incomplete.is-origin:not(.cursor-on):hover:after {
    content: "The Incomplete came from here";
  }

  /* Tooltip message for sources of the error */
  &.dark-error.is-origin:not(.cursor-on):hover:after {
    content: "The Error came from here";
  }
}

